devops/k8s/app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: gauravagarwalr/kubernetes-challenge:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 4000
